[workspace]
members = [
    "autosurgeon",
    "autosurgeon-derive",
]
resolver = "2"

[workspace.package]
authors = ["Alex Good <alex@memoryandthought.me>"]
edition = "2021"
rust-version = "1.65"
repository = "https://github.com/automerge/autosurgeon"
license = "MIT"

[workspace.dependencies]
automerge = { "git" = "https://github.com/automerge/automerge.git" , "rev" = "a2ba7326ec886a9e6d02377fd904dbdde35eb89d"}
automerge-test = { "git" = "https://github.com/automerge/automerge.git" , "rev" = "a2ba7326ec886a9e6d02377fd904dbdde35eb89d"}
